# project-group14

./: .buildinfo  First.html  First.ipynb  LinearRegression.html  LinearRegression.ipynb  Makefile  README.html  README.md  Second.html  Second.ipynb  Third.html  Third.ipynb  _config.yml  _toc.yml  conf.py  contribution_statement.html  environment.yml  genindex.html  intro.html  intro.md  main.html  main.ipynb  markdown-notebooks.html  markdown.html  median_income (look at current dollars).xls  notebooks.html  objects.inv  project-description.html  ref.html  requirements.txt  sales-of-cigarette-each-state.html  sales-of-cigarette-each-state.ipynb  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle  intro.doctree  main.doctree
.doctrees/.pytest_cache/: README.doctree
.pytest_cache/: README.html
_build/.doctrees/: environment.pickle
_build/html/: .buildinfo  README.html  Third.html  genindex.html  intro.html  main.html  markdown-notebooks.html  notebooks.html  objects.inv  project-description.html  ref.html  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle  intro.doctree  main.doctree  notebooks.doctree  sales-of-cigarette-each-state.doctree
_build/html/_sources/: README.md  main.ipynb
_build/jupyter_execute/: LinearRegression.ipynb  main.ipynb  markdown-notebooks.ipynb  notebooks.ipynb  sales-of-cigarette-each-state.ipynb
_sources/: LinearRegression.ipynb  README.md  contribution_statement.md  intro.md  main.ipynb
data/: states_sales.csv
notebooks/: LinearRegression.html  LinearRegression.ipynb  main.html  main.ipynb  sales-of-cigarette-each-state.html
output/: avgSales2013.html  avgSales2014.html  avgSales2016.html  avgSales2017.html  avgSales2018.html  avgSales2019.html  medianIncome2013.html  medianIncome2014.html  medianIncome2015.html  medianIncome2016.html  medianIncome2017.html  medianIncome2018.html  medianIncome2019.html
project_tools/: __init__.py  dataformat.py  utils.py
project_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project_tools/tests/: __init__.py  test_dataformat.py
